# Kalshi-Open-vs-Close-Analysis-Sports

./: .gitignore  README.md  app.py  cli.py  kalshi_open_close_regimes_from_scratch_daily_fixed_v2.ipynb  main.py  pyproject.toml  regime.py  regime_streamlit_app.py  requirements.txt  streamlit_app.py
kalshi_analysis/: __init__.py  analysis.py  api.py  config.py  features.py  plots.py
kalshi_cache/: settled_KXNBAGAME_2026-01-25_2026-02-24.json
